<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.atazheng-study</groupId>
        <artifactId>EeveeAgent</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>main-application</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!--继承通用框架依赖-->
        <dependency>
            <groupId>com.atazheng-study</groupId>
            <artifactId>core-framework</artifactId>
            <version>${project.version}</version>
        </dependency>
        <!--继承AI模块依赖-->
        <dependency>
            <groupId>com.atazheng-study</groupId>
            <artifactId>eevee-ai</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!--milvus-->
        <dependency>
            <groupId>io.milvus</groupId>
            <artifactId>milvus-sdk-java</artifactId>
        </dependency>

        <!--对接 S3 兼容存储的官方工具包-->
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>s3</artifactId>
        </dependency>


        <!--MySQL驱动-->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>
        <!--合法性校验工具 JSR-380 (Bean Validation 2.0) 规范-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <!-- 文件类型检测 -->
        <dependency>
            <groupId>net.sf.jmimemagic</groupId>
            <artifactId>jmimemagic</artifactId>
            <version>0.1.5</version>
        </dependency>


    </dependencies>
</project>